# experiments-loop-functions

./: .gitignore  CMakeLists.txt  LICENSE  README.md
loop-functions/: CMakeLists.txt  GiandujaAggregation2SpotsLoopFunc.cpp  GiandujaAggregationLoopFunc.cpp  GiandujaBeaconAggregationLoopFunc.cpp  GiandujaBeaconAggregationLoopFunc.h  GiandujaDecisionLoopFunc.cpp  GiandujaDecisionLoopFunc.h  GiandujaNestingHideLoopFunc.cpp  GiandujaNestingHideLoopFunc.h  GiandujaNestingLoopFunc.h  GiandujaStopLoopFunc.cpp  GiandujaStopLoopFunc.h
loop-functions/AutoMoDe-Modules/: AntiPhototaxisLoopFunc.cpp  AntiPhototaxisLoopFunc.h  AttractionLoopFunc.cpp  AttractionLoopFunc.h  CMakeLists.txt  ExplorationLoopFunc.cpp  ExplorationLoopFunc.h  PhototaxisLoopFunc.cpp  PhototaxisLoopFunc.h  RepulsionLoopFunc.cpp  RepulsionLoopFunc.h  StopLoopFunc.cpp  StopLoopFunc.h
loop-functions/ModularityExperiment/: CMakeLists.txt
loop-functions/NEATvsEvo/: AggregationSingleSpot.cpp  AggregationSingleSpot.h  CMakeLists.txt  DirectionalGate.cpp  DirectionalGate.h  SCAaroundLoopFunc.cpp  SCAaroundLoopFunc.h  SCAbehindLoopFunc.cpp  SCAbehindLoopFunc.h  SCAbisLoopFunc.cpp  SCAbisLoopFunc.h  SCAblackLoopFunc.cpp  SCAblackLoopFunc.h  ShelterConstrainedAccessLoopFunc.cpp  ShelterConstrainedAccessLoopFunc.h  ShelterFiftyFiftyLoopFunc.cpp  ShelterFiftyFiftyLoopFunc.h
loop-functions/chocolate/AAC/: CMakeLists.txt  ChocolateAACLoopFunc.cpp  ChocolateAACLoopFunc.h
loop-functions/chocolate/CFA/: CMakeLists.txt  ChocolateCFALoopFunc.cpp  ChocolateCFALoopFunc.h
loop-functions/chocolate/LCN/: CMakeLists.txt  ChocolateLCNLoopFunc.cpp  ChocolateLCNLoopFunc.h
loop-functions/chocolate/SCA/: CMakeLists.txt  ChocolateSCALoopFunc.cpp  ChocolateSCALoopFunc.h
loop-functions/chocolate/SPC/: CMakeLists.txt  ChocolateSPCLoopFunc.cpp  ChocolateSPCLoopFunc.h
loop-functions/complexity/: AggregationSingleSpot.cpp  AggregationSingleSpot.h  AggregationTwoSpots5050.cpp  AggregationTwoSpots5050.h  AggregationTwoSpotsXOR.cpp  AggregationTwoSpotsXOR.h  AggregationTwoSpotsXOR2.cpp  AggregationTwoSpotsXOR2.h  CMakeLists.txt
loop-functions/example/: CMakeLists.txt  ExampleAggregationLoopFunc.cpp  ExampleAggregationLoopFunc.h
loop-functions/gianduja/: CMakeLists.txt  GiandujaAggregation2SpotsLoopFunc.cpp  GiandujaAggregation2SpotsLoopFunc.h  GiandujaAggregationLoopFunc.cpp  GiandujaAggregationLoopFunc.h  GiandujaBeaconAggregationLoopFunc.cpp  GiandujaBeaconAggregationLoopFunc.h  GiandujaBeaconDecisionLoopFunc.cpp  GiandujaBeaconDecisionLoopFunc.h  GiandujaBeaconStopLoopFunc.cpp  GiandujaBeaconStopLoopFunc.h  GiandujaDecisionLoopFunc.cpp  GiandujaDecisionLoopFunc.h  GiandujaNestingHideLoopFunc.cpp  GiandujaNestingHideLoopFunc.h  GiandujaNestingHideLoopFunc2.cpp  GiandujaNestingLoopFunc.cpp  GiandujaNestingLoopFunc.h  GiandujaStopLoopFunc.cpp  GiandujaStopLoopFunc.h
loop-functions/localsearch/: AggregationWhiteAndBlackLoopFunc.cpp  AggregationWhiteAndBlackLoopFunc.h  CMakeLists.txt  GuidedShelterLoopFunc.cpp  GuidedShelterLoopFunc.h
loop-functions/mate/: CMakeLists.txt
loop-functions/mate/LCF/: CMakeLists.txt  MateLCFLoopFunc.cpp  MateLCFLoopFunc.h
loop-functions/mate/SC/: CMakeLists.txt  MateSCLoopFunc.cpp  MateSCLoopFunc.h
loop-functions/mate/SPD11/: CMakeLists.txt  MateSPD11LoopFunc.cpp  MateSPD11LoopFunc.h
loop-functions/mate/SPD8/: CMakeLists.txt  MateSPD8LoopFunc.cpp  MateSPD8LoopFunc.h
loop-functions/rvr-pow/: CMakeLists.txt
loop-functions/rvr-pow/aggregation/: AggregationOneSpotLoopFunc.cpp  AggregationOneSpotLoopFunc.h  CMakeLists.txt
loop-functions/rvr-pow/color-aggregation/: CMakeLists.txt  ColorAggregationLoopFunc.cpp  ColorAggregationLoopFunc.h
loop-functions/rvr-pow/grid-exploration/: CMakeLists.txt  GridExplorationLoopFunc.cpp  GridExplorationLoopFunc.h
loop-functions/vanilla/: AggregationTwoSpotsLoopFunc.cpp  AggregationTwoSpotsLoopFunc.h  CMakeLists.txt  ForagingTwoSpotsLoopFunc.cpp  ForagingTwoSpotsLoopFunc.h
loop-functions/visual-add-ons/: CMakeLists.txt  epuck_planning_user_functions.cpp  epuck_planning_user_functions.h
scenarios/: guided_shelter.argos  guided_shelter_bt.argos  guided_shelter_bt_visu.argos  guided_shelter_visu.argos
scenarios/aggregation-black-white/: aggregation_bw.argos  aggregation_bw_bt.argos  aggregation_bw_bt_visu.argos  aggregation_bw_visu.argos
scenarios/guided-shelter/shelter-at-border/: guided_shelter.argos  guided_shelter_bt.argos  guided_shelter_bt_visu.argos  guided_shelter_visu.argos
scenarios/guided-shelter/shelter-with-big-offset/: guided_shelter_visu.argos
scenarios/guided-shelter/shelter-with-small-offset/: guided_shelter.argos  guided_shelter_bt.argos  guided_shelter_bt_visu.argos  guided_shelter_visu.argos
scenarios/vanilla/EvoStick/: aggregation_nn.argos  foraging_nn.argos
src/: CMakeLists.txt  CoreLoopFunctions.cpp  CoreLoopFunctions.h  SimLibrary.cmake
src/cmake/: ARGoSBuildChecks.cmake  ARGoSBuildOptions.cmake
